<resources>
    <string name="app_name">晨餐私厨</string>
    <string name="app_version">For Android(v1.0)</string>
    <string name="back">返回</string>
    <string name="ok">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="etBody">输入评价文本</string>
    <string name="btnLogin">提交</string>
    <string name="username">账号:</string>
    <string name="etLoginID">输入账号</string>
    <string name="pw">密码:</string>
    <string name="etPassword">输入密码</string>
    <string name="btnLoginButton">登录</string>
    <string name="btnRegister">注册</string>
    <string name="ckbSavePwd">记住密码</string>
    <string name="canChoose">可选</string>
    <string name="hadChoose">已选</string>
    <string name="hadChoosed">已被选</string>
    <string name="order_num">订餐数量:</string>
    <string name="etAmount">1</string>
    <string name="userName_tv">账号:</string>
    <string name="name">姓名:</string>
    <string name="etName">输入姓名(必填)</string>
    <string name="pw_again">重输密码:</string>
    <string name="etPasswordOK">再次输入密码(必填)</string>
    <string name="btnLoginAgain">回到登录</string>
    <string name="tishi">    首次使用需要配置服务端IP地址+端口号,如果当前是采用模拟器测试,IP地址保持默认(10.0.2.2:8080)即可</string>
    <string name="etIP">192.168.43.96:8080</string>
    <string name="oldPw">旧密码:</string>
    <string name="etPasswordOld">请输入旧密码</string>
    <string name="new_pw">新密码</string>
    <string name="pw_confirm">确认密码:</string>
    <string name="notOK">取消</string>
    <string name="ordernum">订购数量:</string>
    <string name="title_activity_add_pic">AddPicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_all_classify">AllClassifyActivity</string>
    <string name="title_activity_edit_steps">EditStepsActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_hot24">Hot24Activity</string>
    <string name="title_activity_pre_recipe">PreRecipeActivity</string>
    <string name="title_activity_production_steps">ProductionStepsActivity</string>
    <string name="title_activity_rlbtn">RLbtnActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_up_finish_pic">UpFinishPicActivity</string>
    <string name="title_activity_up_recipe">UpRecipeActivity</string>
    <string name="user">user</string>
    <string name="classify">classify</string>
    <string name="take_out">外卖</string>
    <string name="show_food">秀美食</string>
    <string name="search_icon">search_icon</string>
    <string name="search_word">搜索早餐</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="new_recommend">new_recommend</string>
    <string name="one">one</string>
    <string name="many">many</string>
    <string name="special_word">特色</string>
    <string name="special_detail">special_detail</string>
    <string name="baby">baby</string>
    <string name="baby_word">宝宝止咳</string>
    <string name="head"></string>
    <string name="head_word">健脑益智</string>
    <string name="beauty"></string>
    <string name="beauty_word">美容养颜</string>
    <string name="fire"></string>
    <string name="fire_word">清热去火</string>
    <string name="index">主页</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="rush_buy_word">抢购专区</string>
    <string name="steamedBun"></string>
    <string name="steamedName">鲜肉包</string>
    <string name="money">¥1.5</string>
    <string name="money_sales">¥1.0</string>
    <string name="remain_num">剩余</string>
    <string name="index_num">40</string>
    <string name="num_unit">个</string>
    <string name="porridge"></string>
    <string name="porridgeName">栗子小米粥</string>
    <string name="porridge_money_sales">¥6.0</string>
    <string name="porridge_money">¥10.0</string>
    <string name="porridge_index_num">5</string>
    <string name="porridge_num_unit">份</string>
    <string name="tofu"></string>
    <string name="tofuName">豆腐脑</string>
    <string name="tofu_money_sales">¥3.0</string>
    <string name="tofu_money">¥5.0</string>
    <string name="tofu_index_num">10</string>
    <string name="tofu_num_unit">份</string>
    <string name="hot_word">热门主题</string>
    <string name="all_classify">全部分类</string>
    <string name="ac_search"></string>
    <string name="channel_imageview_orientation"></string>
    <string name="register_back">back</string>
    <string name="phone_num">请输入手机号码</string>
    <string name="register_code">请输入手机验证码</string>
    <string name="register_next">下一步</string>
    <string name="protocol1">我已阅读并同意</string>
    <string name="protocol2">晨餐私厨服务条款</string>
    <string name="title_activity_protocol">ProtocolActivity</string>
    <string name="register_word">注册</string>
    <string name="del"></string>
    <string name="get_code">获取验证码</string>
    <string name="protocol_back"></string>
    <string name="protocol_user">用户协议</string>
    <string name="title_activity_perfect__info">Perfect_InfoActivity</string>
    <string name="info_back"></string>
    <string name="info_perfect">完善资料</string>
    <string name="password">请输入密码</string>
    <string name="info_finish">完成</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_back"></string>
    <string name="login_word">登录</string>
    <string name="login_register_word">注册</string>
    <string name="login_user">手机号/邮箱</string>
    <string name="login_pw">密码</string>
    <string name="login_btn">登录</string>
    <string name="login_way_word">其他登录方式</string>
    <string name="qq"></string>
    <string name="qq_word">QQ</string>
    <string name="wechat"></string>
    <string name="wechat_word">微信</string>
    <string name="blog"></string>
    <string name="blog_word">微博</string>
    <string name="title_activity_qqlogin">QQLoginActivity</string>
    <string name="qq_login"></string>
    <string name="qq_logout"></string>
    <string name="forget_pw">忘记密码?</string>
    <string name="resetPw_word">重置密码</string>
    <string name="get_phonenum">请输入手机号</string>
    <string name="resetPw_submit">提交</string>
    <string name="setNewPw_word">设置新密码</string>
    <string name="setNewPw_cedeInput">请输入验证码</string>
    <string name="setNewPw_button">获取验证码</string>
    <string name="setNewPw_newPw">设置新密码</string>
    <string name="setNewPw_confirm">确定</string>
    <string name="search_back">back</string>
    <string name="search_edit">请输入早餐名</string>
    <string name="search_button"></string>
    <string name="search_history_word">搜索历史</string>
    <string name="clear_history">清空历史</string>
    <string name="hot_search_word">热门搜索</string>
    <string name="title_activity_show_food">ShowFoodActivity</string>
    <string name="hot_24">24小时最热</string>
    <string name="hot_detail"></string>
    <string name="add_showFood"></string>
    <string name="show_recipe">秀配方</string>
    <string name="addPic_word">填写详情</string>
    <string name="imageview"></string>
    <string name="addPic_edit">我想说。。。</string>
    <string name="addPic_food">美食名称</string>
    <string name="addPic_del"></string>
    <string name="addPic_issue">发布</string>
    <string name="hot24_title">24小时最热</string>
    <string name="hot24_all">全部</string>
    <string name="hot24_end">-----End-----</string>
    <string name="hot24_upPic">上传美食图片</string>
    <string name="hot24_upPic_pic"></string>
    <string name="upRecipe_back"></string>
    <string name="upRecipe_title">上传菜谱</string>
    <string name="upRecipe_next">下一步</string>
    <string name="upRecipe_name">菜谱名称</string>
    <string name="upRecipe_diff">烹饪难度</string>
    <string name="upRecipe_food">食材</string>
    <string name="upRecipe_add_food"></string>
    <string name="upRecipe_tips">小贴士</string>
    <string name="upRecipe_backgroundStrory">背后的故事</string>
    <string name="dialog_materital">用料</string>
    <string name="dialog_useLevel">用量</string>
    <string name="proSteps_back"></string>
    <string name="proSteps_title">制作步骤</string>
    <string name="proSteps_next">下一步</string>
    <string name="proSteps_add"></string>
    <string name="proSteps_add_word">制作步骤</string>
    <string name="editSteps_title">编辑步骤</string>
    <string name="editSteps_confirm">确定</string>
    <string name="editSteps_word">步骤</string>
    <string name="editSteps_num">1</string>
    <string name="editSteps_img"></string>
    <string name="editSteps_edit">请填写您的制作步骤</string>
    <string name="editSteps_del"></string>
    <string name="gv_item_num">步骤1</string>
    <string name="gv_item_img"></string>
    <string name="gv_item_tv">洗净西红柿</string>
    <string name="upFinishPic_title">上传成品图</string>
    <string name="upFinishPic_next">下一步</string>
    <string name="upFinishPic_upPic">上传成品图</string>
    <string name="upFinishPic_pre">预览菜谱</string>
    <string name="upFinish_foodname">西红柿炒鸡蛋</string>
    <string name="upFinish_user">by 小蜗</string>
    <string name="upFinish_food"></string>
    <string name="preRecipe_title">菜谱预览</string>
    <string name="preRecipe_img_all"></string>
    <string name="preRecipe_foodName">西红柿炒鸡蛋</string>
    <string name="preRecipe_userPic"></string>
    <string name="preRecipe_userName">小蜗大王</string>
    <string name="preRecipe_material"></string>
    <string name="preRecipe_tv">食材清单</string>
    <string name="preRecipe_make"></string>
    <string name="preRecipe_tv_make">做法</string>
    <string name="preRecipe_tv_num">共1步</string>
    <string name="preRecipe_img_make1"></string>
    <string name="preRecipe_num_make">1.</string>
    <string name="preRecipe_making">洗净西红柿</string>
    <string name="preRecipe_up">发布</string>
    <string name="mine_word">我的</string>
    <string name="mine_set"></string>
    <string name="mine_message"></string>
    <string name="mine_userPic"></string>
    <string name="mine_username">小蜗大王</string>
    <string name="mine_userPhone">18310137365</string>
    <string name="mine_recipe">菜谱</string>
    <string name="mine_recipe_num">0</string>
    <string name="mine_line"> | </string>
    <string name="mine_work">作品</string>
    <string name="mine_work_num">0</string>
    <string name="mine_user_detail"></string>
    <string name="mine_user_signIn">签到</string>
    <string name="mine_receiveAddress">收货地址</string>
    <string name="mine_rA_detail"></string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_collect_detail"></string>
    <string name="mine_onlineCell">在线客服</string>
    <string name="mine_onlineCell_detail"></string>
    <string name="mine_cart">购物车</string>
    <string name="mine_cart_detail"></string>
    <string name="mine_drafts">草稿箱</string>
    <string name="mine_drafts_detail"></string>
    <string name="title_activity_breakfast_list">BreakfastListActivity</string>
    <string name="all_tv">全部早餐</string>
    <string name="title_activity_edit_order">EditOrderActivity</string>
    <string name="title_activity_mine_receive_address">MineReceiveAddressActivity</string>
    <string name="mineAddress_title">我的收货地址</string>
    <string name="mineAddress_name">刘女士</string>
    <string name="mineAddress_phone">18310137365</string>
    <string name="mineAddress_address">北京市朝阳区北四环东路97号</string>
    <string name="mineAddress_addbtn"></string>
    <string name="mineAddress_addWord">添加收货地址</string>
    <string name="title_activity_add_address">AddAddressActivity</string>
    <string name="addAddress_title">新增收货地址</string>
    <string name="addAddress_contact">联系人</string>
    <string name="addAddress_name">姓名:</string>
    <string name="addAddress_nameEdit"></string>
    <string name="addAddress_male">先生</string>
    <string name="addAddress_female">女士</string>
    <string name="addAddress_phone">手机:</string>
</resources>