<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f1f1">
	<RelativeLayout 
	    android:id="@+id/mine_top"
	    android:layout_width="match_parent"
	    android:layout_height="55dp"
	    android:background="#ffffff">
	    <TextView 
	        android:id="@+id/mine_word"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_word"
	        android:textSize="20sp"
	        android:textColor="#ff5a60"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"/>
	    <ImageButton 
	        android:id="@+id/mine_message"
	        android:layout_width="25dp"
	        android:layout_height="25dp"
	        android:background="@drawable/user"
	        android:contentDescription="@string/mine_message"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:layout_centerVertical="true"/>
	    <ImageButton 
	        android:id="@+id/mine_set"
	        android:layout_width="25dp"
	        android:layout_height="25dp"
	        android:background="@drawable/set"
	        android:contentDescription="@string/mine_set"
	        android:layout_toLeftOf="@id/mine_message"
	        android:layout_marginRight="20dp"
	        android:layout_centerVertical="true"/>
	</RelativeLayout>
   <View
       android:id="@+id/mine_line"
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="#c6c5c5"
       android:layout_below="@id/mine_top"/>
   <LinearLayout 
	        android:id="@+id/mine_linear1"
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:baselineAligned="false"
	        android:background="#ffffff"
	        android:layout_below="@id/mine_line"
	        android:layout_marginTop="10dp">
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp">
	    <ImageView
	        android:id="@+id/mine_userPic"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:background="@drawable/set"
	        android:contentDescription="@string/mine_userPic"
	        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_weight="2">
	    <TextView 
	        android:id="@+id/mine_username"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_username"
	        android:textSize="18sp"/>
	    <TextView 
	        android:id="@+id/mine_userPhone"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_userPhone"
	        android:layout_marginTop="10dp"
	        />
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp">
	        <TextView 
	            android:id="@+id/mine_recipe"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mine_recipe"
	            android:textSize="16sp"/>
	        <TextView 
	            android:id="@+id/mine_recipe_num"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mine_recipe_num"
	            android:textColor="#ff5a60"
	            android:textSize="16sp"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mine_line"
	            android:textSize="16sp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"/>
	        <TextView 
	            android:id="@+id/mine_work"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mine_work"
	            android:textSize="16sp"/>
	        <TextView 
	            android:id="@+id/mine_work_num"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mine_work_num"
	            android:textColor="#ff5a60"
	            android:textSize="16sp"/>
	    </LinearLayout>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_weight="1"
	        android:gravity="right"
	        android:layout_marginRight="10dp">
	    <Button 
	        android:id="@+id/mine_user_signIn"
	        android:layout_width="50dp"
	        android:layout_height="30dp"
	        android:text="@string/mine_user_signIn"
	        android:textSize="16sp"
	        android:layout_marginRight="10dp"
	        android:background="#ff5a60"
	        android:textColor="#ffffff"/>
	    <ImageView
	        android:id="@+id/mine_user_detail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/detail_3"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dp"
	        android:contentDescription="@string/mine_user_detail"/>
	    </LinearLayout>
	 </LinearLayout>
	<View
	     android:id="@+id/mine_line2"
	     android:layout_width="match_parent"
	     android:layout_height="1dp"
	     android:layout_marginTop="10dp"
	     android:background="#f4f1f1"
	     android:layout_below="@id/mine_linear1"/>
	 <LinearLayout 
	     android:id="@+id/mine_linear2"
	     android:layout_width="match_parent"
	     android:layout_height="50dp"
	     android:orientation="horizontal"
	     android:layout_below="@id/mine_line2"
	     android:background="#ffffff">
	    <TextView
	        android:id="@+id/mine_receiveAddress"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_receiveAddress"
	        android:textSize="16sp"
	        android:layout_weight="30"
	        android:layout_marginLeft="10dp"
	        android:layout_gravity="center_vertical"/>
	     <ImageView
	        android:id="@+id/mine_rA_detail"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/detail_3"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:layout_marginRight="10dp"
	        android:contentDescription="@string/mine_rA_detail"/>
	 </LinearLayout>
	  <View
	     android:id="@+id/mine_line3"
	     android:layout_width="match_parent"
	     android:layout_height="1dp"
	     android:background="#c6c5c5"
	     android:layout_below="@id/mine_linear2"/>
	   <LinearLayout 
	     android:id="@+id/mine_linear3"
	     android:layout_width="match_parent"
	     android:layout_height="50dp"
	     android:orientation="horizontal"
	     android:layout_below="@id/mine_line3"
	     android:background="#ffffff">
	    <TextView
	        android:id="@+id/mine_collect"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_collect"
	        android:textSize="16sp"
	        android:layout_weight="30"
	        android:layout_marginLeft="10dp"
	        android:layout_gravity="center_vertical"/>
	     <ImageView
	        android:id="@+id/mine_collect_detail"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/detail_3"
	        android:layout_marginRight="10dp"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:contentDescription="@string/mine_collect_detail"/>
	 </LinearLayout>
	 <View
	     android:id="@+id/mine_line4"
	     android:layout_width="match_parent"
	     android:layout_height="1dp"
	     android:background="#c6c5c5"
	     android:layout_below="@id/mine_linear3"/>
	   <LinearLayout 
	     android:id="@+id/mine_linear4"
	     android:layout_width="match_parent"
	     android:layout_height="50dp"
	     android:orientation="horizontal"
	     android:layout_below="@id/mine_line4"
	     android:background="#ffffff">
	    <TextView
	        android:id="@+id/mine_onlineCell"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_onlineCell"
	        android:textSize="16sp"
	        android:layout_weight="30"
	        android:layout_marginLeft="10dp"
	        android:layout_gravity="center_vertical"/>
	     <ImageView
	        android:id="@+id/mine_onlineCell_detail"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/detail_3"
	        android:layout_marginRight="10dp"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:contentDescription="@string/mine_onlineCell_detail"/>
	 </LinearLayout>
	  <View
	     android:id="@+id/mine_line5"
	     android:layout_width="match_parent"
	     android:layout_height="1dp"
	     android:background="#c6c5c5"
	     android:layout_below="@id/mine_linear4"/>
	   <LinearLayout 
	     android:id="@+id/mine_linear5"
	     android:layout_width="match_parent"
	     android:layout_height="50dp"
	     android:orientation="horizontal"
	     android:layout_below="@id/mine_line5"
	     android:background="#ffffff">
	    <TextView
	        android:id="@+id/mine_cart"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_cart"
	        android:textSize="16sp"
	        android:layout_weight="30"
	        android:layout_marginLeft="10dp"
	        android:layout_gravity="center_vertical"/>
	     <ImageView
	        android:id="@+id/mine_cart_detail"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/detail_3"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:layout_marginRight="10dp"
	        android:contentDescription="@string/mine_cart_detail"/>
	 </LinearLayout>
	 <View
	     android:id="@+id/mine_line6"
	     android:layout_width="match_parent"
	     android:layout_height="1dp"
	     android:background="#c6c5c5"
	     android:layout_below="@id/mine_linear5"/>
	   <LinearLayout 
	     android:id="@+id/mine_linear6"
	     android:layout_width="match_parent"
	     android:layout_height="50dp"
	     android:orientation="horizontal"
	     android:layout_below="@id/mine_line6"
	     android:background="#ffffff">
	    <TextView
	        android:id="@+id/mine_drafts"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/mine_drafts"
	        android:textSize="16sp"
	        android:layout_weight="30"
	        android:layout_marginLeft="10dp"
	        android:layout_gravity="center_vertical"/>
	     <ImageView
	        android:id="@+id/mine_drafts_detail"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/detail_3"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:layout_marginRight="10dp"
	        android:contentDescription="@string/mine_drafts_detail"/>
	 </LinearLayout>
	 <View
	     android:id="@+id/mine_line7"
	     android:layout_width="match_parent"
	     android:layout_height="1dp"
	     android:background="#c6c5c5"
	     android:layout_below="@id/mine_linear6"/>
</RelativeLayout>
