<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStepsActivity" >
	<RelativeLayout 
	    android:id="@+id/editSteps_top"
	    android:layout_width="match_parent"
	    android:layout_height="55dp"
	    android:background="#ffffff">
	    <ImageButton 
	        android:id="@+id/editSteps_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/back"
	        android:background="#00000000"
	        android:contentDescription="@string/back"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"/>
	    <TextView
	        android:id="@+id/editSteps_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/editSteps_title"
	        android:textSize="20sp"
	        android:textColor="#ff5a60"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"
	        android:layout_toRightOf="@id/editSteps_back"/>
	    <TextView
	        android:id="@+id/editSteps_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/editSteps_confirm"
	        android:textSize="20sp"
	        android:textColor="#ff5a60"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:layout_centerVertical="true"
	        />
	</RelativeLayout>
	<View
	    android:id="@+id/editSteps_line"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="#c6c5c5"
	    android:layout_below="@id/editSteps_top"/>
	<RelativeLayout 
	    android:id="@+id/editSteps_middle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffffff"
	    android:layout_margin="10dp"
	    android:layout_below="@id/editSteps_line">
	    <LinearLayout 
	        android:id="@+id/editSteps_num_linear"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/editSteps_word"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/editSteps_word"
	        android:layout_marginLeft="10dp"
	        android:textSize="20sp"/>
	    <TextView
	        android:id="@+id/editSteps_num"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/editSteps_num"
	        android:textSize="20sp"/>
	    </LinearLayout>
	    <ImageView
	        android:id="@+id/editSteps_img"
	        android:layout_width="match_parent"
	        android:layout_height="300dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_below="@id/editSteps_num_linear"
	        android:background="@drawable/add_pic"
	        android:scaleType="fitXY"
	        android:contentDescription="@string/editSteps_img"/>
	    <EditText
	        android:id="@+id/editSteps_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/editSteps_edit"
	        android:layout_below="@id/editSteps_img"
	        android:textSize="20sp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        />
	</RelativeLayout>
	<ImageButton
	    android:id="@+id/editSteps_del"
	    android:layout_width="wrap_content"
	    android:layout_height="30dp"
	    android:background="@drawable/delete"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentBottom="true"
	    android:layout_marginRight="20dp"
	    android:layout_marginBottom="20dp"
	    android:contentDescription="@string/editSteps_del"/>
</RelativeLayout>
