<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPicActivity" >
    <RelativeLayout 
        android:id="@+id/addPic_top"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ffffff">
        <ImageButton
            android:id="@+id/addPic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="#00000000"
            android:contentDescription="@string/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/addPic_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPic_word"
            android:textSize="20sp"
            android:textColor="#ff5a60"
            android:layout_toRightOf="@id/addPic_back"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/addPic_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPic_issue"
            android:textSize="20sp"
            android:textColor="#ff5a60"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <View
        android:id="@+id/addPic_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c6c5c5"
        android:layout_below="@id/addPic_top"/>
    <EditText
        android:id="@+id/addPic_food"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/addPic_line"
        android:hint="@string/addPic_food"
        android:padding="10dp"/>
    <EditText 
	        android:id="@+id/addPic_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/addPic_edit"
	        android:background="@drawable/edit_bg"
	        android:layout_below="@id/addPic_food"
	        android:gravity="top|left"
	        android:padding="12dp"
	        android:layout_margin="20dp"
	        android:textSize="16sp"
	        />
	 <ImageView
	        android:id="@+id/addPic_imageview"
	        android:layout_width="300dp"
	        android:layout_height="300dp"
	        android:contentDescription="@string/imageview"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/addPic_edit"
	        android:background="@drawable/add_pic"
	        android:layout_margin="20dp"
	        android:scaleType="fitXY"
	       />
</RelativeLayout>
